feat: add main & footer html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,105 @@
         <div class="humidity"></div>
       </div>
     </header>
+    <main class="main">
+      <div class="slider-icons">
+        <button class="slide-prev slider-icon"></button>
+        <button class="slide-next slider-icon"></button>
+      </div>
+      <time class="time delay"></time>
+      <date class="date delay"></date>
+      <div class="greeting-container delay">
+        <span class="greeting"></span>
+        <input type="text" class="name" placeholder="[Enter name]" />
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="settings">
+        <button class="settings-btn"></button>
+        <div class="overlay hidden"></div>
+        <fieldset class="settings-container hidden delay">
+          <ul>
+            <li>
+              <label class="input-label label-language" for="language">Language:</label>
+              <select name="language" id="language" class="language">
+                <option value="en">English</option>
+                <option value="ru">Русский</option>
+              </select>
+            </li>
+            <li>
+              <label class="input-label label-image" for="image-source">Image source:</label>
+              <select name="image-source" id="image-source" class="image-source">
+                <option value="github">GitHub</option>
+                <option value="unsplash">Unsplash API</option>
+                <option value="flickr">Flickr API</option>
+              </select>
+            </li>
+            <li class="tags-container hidden">
+              <label class="input-label label-tags" for="tags">Tags for background:</label>
+              <input type="text" name="tags" class="tags" id="tags" />
+            </li>
+            <li>
+              <label class="checkbox-label label-time" id="time-checkbox-label">
+                <span class="switch-span time-span">Show time</span>
+                <input type="checkbox" class="checkbox-input" id="time-checkbox-input" checked />
+                <span class="checkbox-switch"></span>
+              </label>
+            </li>
+            <li>
+              <label class="checkbox-label label-date" id="date-checkbox-label">
+                <span class="switch-span date-span">Show date</span>
+                <input type="checkbox" class="checkbox-input" id="date-checkbox-input" checked />
+                <span class="checkbox-switch"></span>
+              </label>
+            </li>
+            <li>
+              <label class="checkbox-label label-greeting" id="greeting-checkbox-label">
+                <span class="switch-span greeting-span">Show greeting</span>
+                <input type="checkbox" class="checkbox-input" id="greeting-checkbox-input" checked />
+                <span class="checkbox-switch"></span>
+              </label>
+            </li>
+            <li>
+              <label class="checkbox-label label-quote" id="quote-checkbox-label">
+                <span class="switch-span quote-span">Show quote of the day</span>
+                <input type="checkbox" class="checkbox-input" id="quote-checkbox-input" checked />
+                <span class="checkbox-switch"></span>
+              </label>
+            </li>
+            <li>
+              <label class="checkbox-label label-weather" id="weather-checkbox-label">
+                <span class="switch-span weather-span">Show weather forecast</span>
+                <input type="checkbox" class="checkbox-input" id="weather-checkbox-input" checked />
+                <span class="checkbox-switch"></span>
+              </label>
+            </li>
+            <li class="player-li">
+              <label class="checkbox-label label-player" id="player-checkbox-label">
+                <span class="switch-span player-span">Show audio player</span>
+                <input type="checkbox" class="checkbox-input" id="player-checkbox-input" checked />
+                <span class="checkbox-switch"></span>
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+      </div>
+      <div class="quote-container delay">
+        <button class="change-quote"></button>
+        <div>
+          <div class="quote"></div>
+          <div class="author"></div>
+        </div>
+      </div>
+      <div class="copyright">
+        <div class="year">2022</div>
+        <div class="rsschool">
+          <a href="https://rs.school/js/" target="_blank"><img src="./assets/svg/rs_school_white.svg" alt="RS School logo" /></a>
+        </div>
+        <div class="github">
+          <a href="https://github.com/VladimirMamaevsky" target="_blank"><img src="./assets/svg/github.svg" alt="GitHub logo" /></a>
+        </div>
+      </div>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
