fix: add ua language

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							>
 							<select name="language" id="language" class="language">
 								<option value="en">English</option>
-								<option value="ru">Русский</option>
+								<option value="ru">Українська</option>
 							</select>
 						</li>
 						<li>
